tests/e2e/keywords/List_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    List = 1
      ^^^^

E0020: `List` is a reserved keyword
